Bug #2638 - WP Nav adjustment - truncate long site names
This is for the site name in the WP Admin Bar on group sites. The client-side
trunction was not properly firing on those site names - however the text-overflow CSS
property is now well supported, and so instead of attempting to resolve the issue
within the client-side script, I simply updated the site name to leverage the
text-overflow property.

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -421,6 +421,40 @@
             #wp-admin-bar-site-name {
                 border-left: none;
                 max-width: 320px;
+                > .ab-item{
+                    white-space: normal;
+                    display: flex;
+                    align-items: center;
+                    &:after{
+                        content: "\f0d7";
+                        display: flex;
+                        font: normal normal normal 14px/1 FontAwesome;
+                        text-rendering: auto;
+                        -webkit-font-smoothing: antialiased;
+                        -moz-osx-font-smoothing: grayscale;
+                        position: absolute;
+                        right: 4%;
+                        top: 0;
+                        bottom: 0;
+                        justify-content: center;
+                        align-items: center;
+                        @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max){
+                            display: none;
+                        }
+                    }
+                    @media (min-width: @screen-md-min){
+                        padding-right: 8%;
+                    }
+                    @media (max-width: @screen-xs-max){
+                        padding-right: 8%;
+                    }
+                    .site-name{
+                        white-space: nowrap;
+                        position: relative;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                    }
+                }
             }
             #wp-admin-bar-my-openlab,
             #wp-admin-bar-network-menu-mobile {
